--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -8,8 +8,13 @@
 // Bootstrap
 @import "~bootstrap-sass/assets/stylesheets/bootstrap";
 
-body{
-    margin: 0;
-    padding: 0;
+.form {
+    @media (min-width:768px) {
+        margin: 0 auto;
+        width: 60%;
+    }
+    &__error{
+        color: red;
+    }
 }
 
