--- a/public/css/app.css
+++ b/public/css/app.css
@@ -8365,3 +8365,14 @@ a {
   cursor: pointer;
 }
 
+.fade-enter-active,
+.fade-leave-active {
+  -webkit-transition: all .2s ease;
+  transition: all .2s ease;
+}
+
+.fade-enter,
+.fade-leave-active {
+  opacity: 0;
+}
+
