--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -22,3 +22,11 @@ a{
     cursor: pointer;
 }
 
+.fade-enter-active, .fade-leave-active {
+    transition: all .2s ease;
+}
+
+.fade-enter, .fade-leave-active {
+    opacity: 0;
+}
+
